added bg color and styled colors

--- a/index.html
+++ b/index.html
@@ -9,38 +9,25 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
-
-      <div class="row">
-        <div class="large-12 columns">
-          <h1>Prosper Style Guide</h1>
-        </div>
-      </div>
-
-
     <div class="row">
-      <div class="large-12 columns">
-	        <h3>The beginning of our style guide.</h3>
-	        <p>This is placeholder for an explanation I don't know if we need yet.</p>
+      <div class="large-3 columns masterside-nav">
+        <h1>Prosper Style Guide</h1>
+        <nav>
+            <ul class="side-nav" role="navigation" title="Link List">
+              <li role="menuitem"><a href="#">Grid System</a></li>
+              <li role="menuitem"><a href="#">Logo</a></li>
+              <li role="menuitem"><a href="#">Typography</a></li>
+              <li role="menuitem"><a href="#">Colors</a></li>
+              <li role="menuitem"><a href="#">Forms, radio and checkboxes</a></li>
+              <li role="menuitem"><a href="#">Buttons and Links</a></li>
+            </ul>
+        </nav>
       </div>
-    </div>
+      <div class="large-9 columns mainsection">
+        <h3>The beginning of our style guide.</h3>
+        <p>This is placeholder for an explanation I don't know if we need yet.</p>
 
-    <div class="row">
-      <div class="large-4 columns">
-        <ul class="side-nav" role="navigation" title="Link List">
-          <li role="menuitem"><a href="#">Grid System</a></li>
-          <li role="menuitem"><a href="#">Logo</a></li>
-          <li role="menuitem"><a href="#">Typography</a></li>
-          <li role="menuitem"><a href="#">Colors</a></li>
-          <li role="menuitem"><a href="#">Forms, radio and checkboxes</a></li>
-          <li role="menuitem"><a href="#">Buttons and Links</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="large-12 columns">
         <h4 class="graytitle">Grid System</h4>
-        <!-- Grid Example -->
 
         <div class="row">
           <div class="large-12 columns">
@@ -81,170 +68,171 @@
 
         <hr />
 
-          <div class="row">
-            <div class="large-12 columns">
-              <h4 class="graytitle">Logo</h4>
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-6 medium-6 columns">
-              <img src="img/prosperLogodark.png" alt="Prosper Logo Dark" >
-            </div>
-            <div class="large-6 medium-6 columns" id="darkbg">
-              <img src="img/prosperLogowhite.png" alt="Prosper Logo White" >
-            </div>
-          </div>
 
-        <hr />
-
-          <div class="row">
-            <div class="large-12 columns">
-              <h4 class="graytitle">Typography</h4>
-              <h1>H1 Heading Helvetica Neue 75 Bold</h1>
-              <h2>H2 Heading Helvetica Neue 75 Bold</h2>
-              <h3>H3 Heading Helvetica Neue Regular</h3>
-              <h4>H4 Heading Helvetica Neue Regular</h4>
-              <h5>H4 Heading Helvetica Neue Regular</h5>
-              <h6>H4 Heading Helvetica Neue Regular</h6>
-              <p>Paragraph Helvetica Neue 55 Roman</p>
-            </div>
-          </div>
-
-        <hr />
-
-          <div class="row">
-            <div class="large-12 columns">
-              <h4 class="graytitle">Colors</h4>
-            </div>
-          </div>
-          <div class="row" id="primarycolors">
-            <div class="large-3 medium 3 columns">
-              <div class="callout panel" id="mainbgcolor">
-                <p>Prosper Blue #4aa9db</p>
-              </div>
-            </div>
-            <div class="large-3 medium 3 columns">
-              <div class="callout panel" id="mainfgcolor">
-                <p>Prosper Dark Blue #09064d</p>
-              </div>
-            </div>
-            <div class="large-3 medium 3 columns">
-              <div class="callout panel" id="maintextcolor">
-                <p>Prosper Dark Gray #414042</p>
-              </div>
-            </div>
-            <div class="large-3 medium 3 columns">
-              <div class="callout panel">
-                <p>Medium Gray #979797</p>
-              </div>
-            </div>
-          </div>
-          <div class="row" id="secondarycolors">
-            <div class="large-3 medium 3 columns">
-              <div class="callout panel">
-                <p>Light Gray #f7f7f7</p>
-              </div>
-            </div>
-            <div class="large-3 medium 3 columns">
-              <div class="callout panel">
-                <p>Black #000000</p>
-              </div>
-            </div>
-            <div class="large-3 medium 3 columns">
-              <div class="callout panel">
-                <p>Alert Green #414042</p>
-              </div>
-            </div>
-            <div class="large-3 medium 3 columns">
-              <div class="callout panel">
-                <p>Alert Red #979797</p>
-              </div>
-            </div>
-          </div>
-
-        <hr />
-          <div class="row">
-            <div class="large-12 columns">
-                <h4 class="graytitle">Forms, radio and checkboxes</h4>
-            </div>
-          </div>
-          <form>
-  				  <div class="row">
-  				    <div class="large-12 columns">
-  				      <label>Input Label</label>
-  				      <input type="text" placeholder="large-12.columns" />
-  				    </div>
-  				  </div>
-  				  <div class="row">
-  				    <div class="large-4 medium-4 columns">
-  				      <label>Input Label</label>
-  				      <input type="text" placeholder="large-4.columns" />
-  				    </div>
-  				    <div class="large-4 medium-4 columns">
-  				      <label>Input Label</label>
-  				      <input type="text" placeholder="large-4.columns" />
-  				    </div>
-  				    <div class="large-4 medium-4 columns">
-  				      <div class="row collapse">
-  				        <label>Input Label</label>
-  				        <div class="small-9 columns">
-  				          <input type="text" placeholder="small-9.columns" />
-  				        </div>
-  				        <div class="small-3 columns">
-  				          <span class="postfix">.com</span>
-  				        </div>
-  				      </div>
-  				    </div>
-  				  </div>
-  				  <div class="row">
-  				    <div class="large-12 columns">
-  				      <label>Select Box</label>
-  				      <select>
-  				        <option value="husker">Husker</option>
-  				        <option value="starbuck">Starbuck</option>
-  				        <option value="hotdog">Hot Dog</option>
-  				        <option value="apollo">Apollo</option>
-  				      </select>
-  				    </div>
-  				  </div>
-  				  <div class="row">
-  				    <div class="large-6 medium-6 columns">
-  				      <label>Choose Your Favorite</label>
-  				      <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Radio 1</label>
-  				      <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Radio 2</label>
-  				    </div>
-  				    <div class="large-6 medium-6 columns">
-  				      <label>Check these out</label>
-  				      <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
-  				      <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
-  				    </div>
-  				  </div>
-  				  <div class="row">
-  				    <div class="large-12 columns">
-  				      <label>Textarea Label</label>
-  				      <textarea placeholder="small-12.columns"></textarea>
-  				    </div>
-  				  </div>
-  				</form>
-      </div>
-
-      <hr />
-
-      <div class="large-12 columns">
-			  <h4 class="graytitle">Buttons and Links</h4>
-        <br>
         <div class="row">
-          <div class="large-3 medium-3 columns">
-    			  <p><a href="#" class="small button">Simple Button</a><br/>
+          <div class="large-12 columns">
+            <h4 class="graytitle">Logo</h4>
           </div>
-          <div class="large-3 medium-3 columns">
-            <a href="#" class="small radius button">Radius Button</a><br/>
+        </div>
+        <div class="row">
+          <div class="large-6 medium-6 columns">
+            <img src="img/prosperLogodark.png" alt="Prosper Logo Dark" >
           </div>
-          <div class="large-3 medium-3 columns">
-            <a href="#" class="small round button">Round Button</a><br/>
+          <div class="large-6 medium-6 columns" id="darkbg">
+            <img src="img/prosperLogowhite.png" alt="Prosper Logo White" >
           </div>
-          <div class="large-3 medium-3 columns">
-            <a href="#" class="medium success button">Success Btn</a><br/>
+        </div>
+
+        <hr />
+
+        <div class="row">
+          <div class="large-12 columns">
+            <h4 class="graytitle">Typography</h4>
+            <h1>H1 Heading Helvetica Neue 75 Bold</h1>
+            <h2>H2 Heading Helvetica Neue 75 Bold</h2>
+            <h3>H3 Heading Helvetica Neue Regular</h3>
+            <h4>H4 Heading Helvetica Neue Regular</h4>
+            <h5>H4 Heading Helvetica Neue Regular</h5>
+            <h6>H4 Heading Helvetica Neue Regular</h6>
+            <p>Paragraph Helvetica Neue 55 Roman</p>
+          </div>
+        </div>
+
+        <hr />
+
+        <div class="row">
+          <div class="large-12 columns">
+            <h4 class="graytitle">Colors</h4>
+          </div>
+        </div>
+        <div class="row" id="primarycolors">
+          <div class="large-3 medium 3 columns">
+            <div class="callout panel" id="mainbgcolor">
+              <p>Prosper Blue #4aa9db</p>
+            </div>
+          </div>
+          <div class="large-3 medium 3 columns">
+            <div class="callout panel" id="mainfgcolor">
+              <p>Prosper Dark Blue #09064d</p>
+            </div>
+          </div>
+          <div class="large-3 medium 3 columns">
+            <div class="callout panel" id="maintextcolor">
+              <p>Prosper Dark Gray #414042</p>
+            </div>
+          </div>
+          <div class="large-3 medium 3 columns">
+            <div class="callout panel" id="secbgcolor1">
+              <p>Medium Gray #979797</p>
+            </div>
+          </div>
+        </div>
+        <div class="row" id="secondarycolors">
+          <div class="large-3 medium 3 columns">
+            <div class="callout panel" id="secbgcolor2">
+              <p>Light Gray #f7f7f7</p>
+            </div>
+          </div>
+          <div class="large-3 medium 3 columns">
+            <div class="callout panel" id="sectextcolor">
+              <p>Black #000000</p>
+            </div>
+          </div>
+          <div class="large-3 medium 3 columns">
+            <div class="callout panel" id="alertgoodcolor">
+              <p>Alert Green #6ac20a</p>
+            </div>
+          </div>
+          <div class="large-3 medium 3 columns">
+            <div class="callout panel" id="alertbadcolor">
+              <p>Alert Red #d0021b</p>
+            </div>
+          </div>
+        </div>
+
+        <hr />
+        <div class="row">
+          <div class="large-12 columns">
+              <h4 class="graytitle">Forms, radio and checkboxes</h4>
+          </div>
+        </div>
+        <form>
+				  <div class="row">
+				    <div class="large-12 columns">
+				      <label>Input Label</label>
+				      <input type="text" placeholder="large-12.columns" />
+				    </div>
+				  </div>
+				  <div class="row">
+				    <div class="large-4 medium-4 columns">
+				      <label>Input Label</label>
+				      <input type="text" placeholder="large-4.columns" />
+				    </div>
+				    <div class="large-4 medium-4 columns">
+				      <label>Input Label</label>
+				      <input type="text" placeholder="large-4.columns" />
+				    </div>
+				    <div class="large-4 medium-4 columns">
+				      <div class="row collapse">
+				        <label>Input Label</label>
+				        <div class="small-9 columns">
+				          <input type="text" placeholder="small-9.columns" />
+				        </div>
+				        <div class="small-3 columns">
+				          <span class="postfix">.com</span>
+				        </div>
+				      </div>
+				    </div>
+				  </div>
+				  <div class="row">
+				    <div class="large-12 columns">
+				      <label>Select Box</label>
+				      <select>
+				        <option value="husker">Husker</option>
+				        <option value="starbuck">Starbuck</option>
+				        <option value="hotdog">Hot Dog</option>
+				        <option value="apollo">Apollo</option>
+				      </select>
+				    </div>
+				  </div>
+				  <div class="row">
+				    <div class="large-6 medium-6 columns">
+				      <label>Choose Your Favorite</label>
+				      <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Radio 1</label>
+				      <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Radio 2</label>
+				    </div>
+				    <div class="large-6 medium-6 columns">
+				      <label>Check these out</label>
+				      <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
+				      <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
+				    </div>
+				  </div>
+				  <div class="row">
+				    <div class="large-12 columns">
+				      <label>Textarea Label</label>
+				      <textarea placeholder="small-12.columns"></textarea>
+				    </div>
+				  </div>
+				</form>
+
+        <hr />
+
+        <div class="large-12 columns">
+    		  <h4 class="graytitle">Buttons and Links</h4>
+          <br>
+          <div class="row">
+            <div class="large-3 medium-3 columns">
+      			  <p><a href="#" class="small button">Simple Button</a><br/>
+            </div>
+            <div class="large-3 medium-3 columns">
+              <a href="#" class="small radius button">Radius Button</a><br/>
+            </div>
+            <div class="large-3 medium-3 columns">
+              <a href="#" class="small round button">Round Button</a><br/>
+            </div>
+            <div class="large-3 medium-3 columns">
+              <a href="#" class="medium success button">Success Btn</a><br/>
+            </div>
           </div>
         </div>
       </div>
