--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
         <nav>
             <ul class="side-nav" role="navigation" title="Link List">
               <li role="menuitem"><a href="#gridsystem">Grid System</a></li>
-              <li role="menuitem"><a href="#logo">Logo</a></li>
               <li role="menuitem"><a href="#typography">Typography</a></li>
               <li role="menuitem"><a href="#colors">Colors</a></li>
               <li role="menuitem"><a href="#forms">Forms, radio and checkboxes</a></li>
+              <li role="menuitem"><a href="#validation">Validation</a></li>
               <li role="menuitem"><a href="#buttons">Buttons and Links</a></li>
+              <li role="menuitem"><a href="#logo">Logo</a></li>
+              <li role="menuitem"><a href="#icons">Icons</a></li>
             </ul>
         </nav>
       </div>
@@ -27,7 +29,7 @@
       <div class="large-9 columns mainsection">
         <p>This is placeholder for an explanation I don't know if we need yet.</p>
 
-        <h4 class="grayTitle"><a name="gridsystem">Grid System</a></h4>
+        <h4 class="sectionTitle"><a name="gridsystem">Grid System</a></h4>
 
         <div class="row">
           <div class="large-12 columns">
@@ -69,28 +71,8 @@
         <hr />
 
         <div class="row">
-            <div class="large-12 columns">
-                <div class="row">
-                    <div class="large-12 columns">
-                        <h4 class="grayTitle"><a name="logo">Logo</a></h4>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="large-6 medium-6 columns">
-                        <img src="img/prosperLogodark.png" alt="Prosper Logo Dark" >
-                     </div>
-                     <div class="large-6 medium-6 columns">
-                        <img src="img/prosperLogowhite.png" alt="Prosper Logo White" >
-                     </div>
-                </div>
-            </div>
-        </div>
-
-        <hr />
-
-        <div class="row">
           <div class="large-12 columns">
-            <h4 class="grayTitle"><a name="typography">Typography</a></h4>
+            <h4 class="sectionTitle"><a name="typography">Typography</a></h4>
             <h1>H1 Heading Helvetica Neue Bold</h1>
             <h2>H2 Heading Helvetica Neue Regular</h2>
             <h3>H3 Heading Helvetica Neue Regular</h3>
@@ -106,7 +88,7 @@
 
         <div class="row">
             <div class="large-12 columns">
-                <h4 class="grayTitle"><a name="colors">Colors</a></h4>
+                <h4 class="sectionTitle"><a name="colors">Colors</a></h4>
                 <div class="row">
                   <div class="large-3 medium 3 columns">
                     <div class="colorBox primaryColor">
@@ -157,7 +139,7 @@
         <hr />
         <div class="row">
           <div class="large-12 columns">
-              <h4 class="grayTitle"><a name="forms">Forms, radio and checkboxes</a></h4>
+              <h4 class="sectionTitle"><a name="forms">Forms, radio and checkboxes</a></h4>
           </div>
         </div>
         <form>
@@ -179,11 +161,11 @@
             <div class="large-4 medium-4 columns">
               <div class="row collapse">
                 <label>Input Label</label>
+                <div class="small-3 columns">
+                  <span class="prefix">$</span>
+                </div>
                 <div class="small-9 columns">
                   <input type="text" placeholder="small-9.columns" />
-                </div>
-                <div class="small-3 columns">
-                  <span class="postfix">.com</span>
                 </div>
               </div>
             </div>
@@ -191,7 +173,7 @@
           <div class="row">
             <div class="large-12 columns">
               <label>Select Box</label>
-              <select>
+              <select class="styledSelect">
                 <option value="husker">Husker</option>
                 <option value="starbuck">Starbuck</option>
                 <option value="hotdog">Hot Dog</option>
@@ -202,45 +184,149 @@
           <div class="row">
             <div class="large-6 medium-6 columns">
               <label>Choose Your Favorite</label>
-              <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Radio 1</label>
-              <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Radio 2</label>
+              <input type="radio" name="pokemon" value="Red"><label for="pokemonRed">Radio 1</label>
+              <input type="radio" name="pokemon" value="Blue"><label for="pokemonBlue">Radio 2</label>
             </div>
             <div class="large-6 medium-6 columns">
               <label>Check these out</label>
-              <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
-              <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-12 columns">
-              <label>Textarea Label</label>
-              <textarea placeholder="small-12.columns"></textarea>
+              <input type="checkbox"><label for="checkbox1">Checkbox 1</label>
+              <input type="checkbox"><label for="checkbox2">Checkbox 2</label>
             </div>
           </div>
         </form>
 
         <hr />
+
         <div class="row">
-          <div class="large-12 columns">
-            <h4 class="grayTitle"><a name="buttons">Buttons and Links</a></h4>
-            <br>
-            <div class="row">
-              <div class="large-3 medium-3 columns">
-                <p><a href="#" class="small button">Simple Button</a><br/>
-              </div>
-              <div class="large-3 medium-3 columns">
-                <a href="#" class="small radius button">Radius Button</a><br/>
-              </div>
-              <div class="large-3 medium-3 columns">
-                <a href="#" class="small round button">Round Button</a><br/>
-              </div>
-              <div class="large-3 medium-3 columns">
-                <a href="#" class="medium success button">Success Btn</a><br/>
-              </div>
+            <div class="large-12 columns">
+                <h4 class="sectionTitle"><a name="validation">Validation</a></h4>
+                <br>
+                <form>
+                  <div class="row">
+                    <div class="large-12 columns">
+                      <label>Success Validation</label>
+                      <input type="text" placeholder="large-12.columns" />
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="large-12 columns">
+                      <label>Error Message</label>
+                      <input type="text" placeholder="large-12.columns" />
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="large-12 columns">
+                      <label>Help Text</label>
+                      <input type="text" placeholder="large-12.columns" />
+                    </div>
+                  </div>
+                  <div class="row">
+                      <div class="large-12 columns">
+                          <label>Error on Submit</label>
+                          <input type="submit" value="Submit">
+                      </div>
+                  </div>
+                </form>
             </div>
-          </div>
         </div>
-      </div>
+
+        <hr />
+
+        <div class="row">
+            <div class="large-12 columns">
+                <h4 class="sectionTitle"><a name="buttons">Buttons and Links</a></h4>
+                <br>
+                <div class="row">
+                     <div class="large-3 medium-3 columns">
+                        <p><a href="#" class="small button">Simple Button</a><br/>
+                      </div>
+                <div class="large-3 medium-3 columns">
+                        <a href="#" class="small radius button">Radius Button</a><br/>
+                </div>
+                <div class="large-3 medium-3 columns">
+                        <a href="#" class="small round button">Round Button</a><br/>
+                      </div>
+                      <div class="large-3 medium-3 columns">
+                        <a href="#" class="medium success button">Success Btn</a><br/>
+                </div>
+                </div>
+            </div>
+        </div>
+
+        <hr />
+
+        <div class="row">
+            <div class="large-12 columns">
+                <div class="row">
+                    <div class="large-12 columns">
+                        <h4 class="sectionTitle"><a name="logo">Logo</a></h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="large-6 medium-6 columns">
+                        <img src="img/prosperLogodark.png" alt="Prosper Logo Dark" >
+                     </div>
+                     <div class="large-6 medium-6 columns">
+                        <img src="img/prosperLogowhite.png" alt="Prosper Logo White" >
+                     </div>
+                </div>
+            </div>
+        </div>
+
+        <hr />
+
+        <div class="row icons">
+            <div class="large-12 columns">
+                <h4 class="sectionTitle"><a name="icons">Icons</a></h4>
+                <br>
+                <div class="row">
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
+                            <label>Curved Arrow</label>
+                        </div>
+                    </div>
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
+                            <label>Straight Arrow</label>
+                        </div>
+                    </div>
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
+                            <label>Dropdown Arrow</label>
+                        </div>
+                    </div>
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
+                            <label></label>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
+                            <label>Digicert</label>
+                        </div>
+                    </div>
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
+                            <label>TRUSTe</label>
+                        </div>
+                    </div>
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
+                            <label>Privacy &amp; Security</label>
+                        </div>
+                    </div>
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
+                            <label>Equal Housing Lender</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
