--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
       </div>
 
       <div class="large-9 columns mainsection">
-        <p>This is placeholder for an explanation I don't know if we need yet.</p>
+          <p>The beginning of our style guide for the responsive project.  Still needs some polish, but closer to styles we are using for the reskinned funnel.</p>
+          <p>For HTML and CSS styles, I refered to the <a href="https://github.com/stubbornella/oocss/wiki" class="link" target="blank">OOCSS documentation</a>, <a href="https://github.com/necolas/idiomatic-css" class="link" target="blank">Idiomatic commenting style</a> and <a href="http://foundation.zurb.com/docs/" class="link" target="_blank">Foundation's documentation</a>.  I tried to camel case all class names, not use any IDs and separate structural elements like containers from skin elements like text and graphics.  Styles in flight, nothing is permanent.
+          </p>
 
         <h4 class="sectionTitle"><a name="gridsystem">Grid System</a></h4>
 
         <div class="row">
           <div class="large-12 columns">
             <div class="callout panel">
-              <p><strong>We're using <a href="http://foundation.zurb.com/docs/" target="_blank">Foundation</a> for the basic layout.</strong> This is a twelve column section in a row. Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
+              <p><strong>We're using <a href="http://foundation.zurb.com/docs/" class="link" target="_blank">Foundation</a> for the basic layout.</strong> This is a twelve column section in a row. Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
             </div>
           </div>
         </div>
@@ -142,7 +144,7 @@
               <h4 class="sectionTitle"><a name="forms">Forms, radio and checkboxes</a></h4>
           </div>
         </div>
-        <form>
+        <form class="custom">
           <div class="row">
             <div class="large-12 columns">
               <label>Input Label</label>
@@ -173,7 +175,7 @@
           <div class="row">
             <div class="large-12 columns">
               <label>Select Box</label>
-              <select class="styledSelect">
+              <select>
                 <option value="husker">Husker</option>
                 <option value="starbuck">Starbuck</option>
                 <option value="hotdog">Hot Dog</option>
@@ -183,47 +185,69 @@
           </div>
           <div class="row">
             <div class="large-6 medium-6 columns">
-              <label>Choose Your Favorite</label>
-              <input type="radio" name="pokemon" value="Red"><label for="pokemonRed">Radio 1</label>
-              <input type="radio" name="pokemon" value="Blue"><label for="pokemonBlue">Radio 2</label>
+              <label>Radios appear like this</label>
+                    <label for="radio1">
+                        <input type="radio" name="radio1" style="display:none;"><span class="custom radio"></span>Radio 1
+                    </label>
+                    <label for="radio2">
+                        <input type="radio" name="radio2" style="display:none;"><span class="custom radio"></span>Radio 2
+                    </label>
             </div>
             <div class="large-6 medium-6 columns">
-              <label>Check these out</label>
-              <input type="checkbox"><label for="checkbox1">Checkbox 1</label>
-              <input type="checkbox"><label for="checkbox2">Checkbox 2</label>
+              <label>Checkboxes are like so</label>
+              <label for="checkbox1"><input type="checkbox" name="Checkbox 1" style="display:none;"><span class="custom checkbox"></span>Checkbox 1</label>
+              <label for="checkbox2"><input type="checkbox" name="Checkbox 2" style="display:none;"><span class="custom checkbox"></span>Checkbox 2</label>
             </div>
           </div>
         </form>
 
         <hr />
 
-        <div class="row">
+        <div class="row validation">
             <div class="large-12 columns">
                 <h4 class="sectionTitle"><a name="validation">Validation</a></h4>
                 <br>
                 <form>
                   <div class="row">
                     <div class="large-12 columns">
-                      <label>Success Validation</label>
-                      <input type="text" placeholder="large-12.columns" />
+                        <p>Successful validation</p>
+                        <label class="success">Last Name
+                            <input type="text" class="success" placeholder="large-12.columns" />
+                        </label>
                     </div>
                   </div>
+                  <br>
                   <div class="row">
                     <div class="large-12 columns">
-                      <label>Error Message</label>
-                      <input type="text" placeholder="large-12.columns" />
+                        <p>Error</p>
+                        <label class="error">Home Address</label>
+                        <input type="text" class="error" placeholder="large-12.columns" />
+                        <small class="error">Home address should be a number plus a street name</small>
                     </div>
                   </div>
+                  <br>
                   <div class="row">
                     <div class="large-12 columns">
-                      <label>Help Text</label>
-                      <input type="text" placeholder="large-12.columns" />
+                        <p>Help text</p>
+                        <small class="help">Expand help text above the field like this when a help-needed field is selected.  Push up fields already completed and keeping the active field in place.</small>
+
+                        <br>
+                        <label class="help">Employment Status</label>
+                        <select>
+                            <option value="">Select</option>
+                            <option>Employed</option>
+                            <option>Self-Employed</option>
+                            <option>Unemployed</option>
+                            <option>Other</option>
+                        </select>
+
                     </div>
                   </div>
+                  <br>
                   <div class="row">
                       <div class="large-12 columns">
-                          <label>Error on Submit</label>
-                          <input type="submit" value="Submit">
+                          <p>Handling errors on submit</p>
+                          <div class="callout panel">If a borrower hits submit without correcting errors, form should navigate to the top most field showing the error.  If possible, after that field is validated, it should navigate to the next error.</div>
                       </div>
                   </div>
                 </form>
@@ -237,18 +261,22 @@
                 <h4 class="sectionTitle"><a name="buttons">Buttons and Links</a></h4>
                 <br>
                 <div class="row">
-                     <div class="large-3 medium-3 columns">
-                        <p><a href="#" class="small button">Simple Button</a><br/>
-                      </div>
-                <div class="large-3 medium-3 columns">
-                        <a href="#" class="small radius button">Radius Button</a><br/>
+                    <div class="large-12columns">
+                            <a href="#" class="small round button"><p>Free floating button</p></a>
+                    </div>
                 </div>
-                <div class="large-3 medium-3 columns">
-                        <a href="#" class="small round button">Round Button</a><br/>
-                      </div>
-                      <div class="large-3 medium-3 columns">
-                        <a href="#" class="medium success button">Success Btn</a><br/>
+                <br>
+                <div class="row">
+                    <div class="large-12columns funnelCTA">
+                            <a href="#" class="back button"><p style="display:none;">Back</p></a>
+                            <a href="#" class="forward button">Get my rate</a>
+                    </div>
                 </div>
+                <br>
+                <div class="row">
+                    <div class="large-12columns columns">
+                        <p>This is how a <a href="#" class="link">link would look</a> when inside a block of text.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -266,7 +294,7 @@
                     <div class="large-6 medium-6 columns">
                         <img src="img/prosperLogodark.png" alt="Prosper Logo Dark" >
                      </div>
-                     <div class="large-6 medium-6 columns">
+                     <div class="large-6 medium-6 columns contrastBg">
                         <img src="img/prosperLogowhite.png" alt="Prosper Logo White" >
                      </div>
                 </div>
@@ -278,26 +306,66 @@
         <div class="row icons">
             <div class="large-12 columns">
                 <h4 class="sectionTitle"><a name="icons">Icons</a></h4>
+                <p>Working on turning these into better svgs --Alexa</p>
                 <br>
                 <div class="row">
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
                             <label>Curved Arrow</label>
+                            <br>
+                            <img src="img/curved_arrow.png" alt="Curved Arrow">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
                             <label>Straight Arrow</label>
+                            <br>
+                            <img src="img/arrow_right.png" alt="Straight Arrow">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
                             <label>Dropdown Arrow</label>
+                            <br>
+                            <img src="img/arrowDropdown.png" alt="Dropdown Arrow">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
-                            <label></label>
+                            <label>Success Check</label>
+                            <br>
+                            <img src="img/successCheck.png" alt="Success Check">
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
+                            <label>Error X</label>
+                            <br>
+                            <img src="img/errorX.png" alt="Error X">
+                        </div>
+                    </div>
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
+                            <label>Facebook</label>
+                            <br>
+                            <img src="img/iconfacebookblue.png" alt="Facebook">
+                        </div>
+                    </div>
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
+                            <label>Twitter</label>
+                            <br>
+                            <img src="img/icontwitterblue.png" alt="Twitter">
+                        </div>
+                    </div>
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
+                            <label>LinkedIn</label>
+                            <br>
+                            <img src="img/iconlinkedinblue.png" alt="LinkedIn">
                         </div>
                     </div>
                 </div>
@@ -306,21 +374,29 @@
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
                             <label>Digicert</label>
+                            <br>
+                            <img src="img/securityicon_digicert.svg" alt="Digicert secure">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
                             <label>TRUSTe</label>
+                            <br>
+                            <img src="img/securityicon_etrust.svg" alt="TRUSTe verified">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
-                            <label>Privacy &amp; Security</label>
+                            <label>Privacy</label>
+                            <br>
+                            <img src="img/securityicon_privacy.svg" alt="Privacy and Security">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
-                            <label>Equal Housing Lender</label>
+                            <label>Equal Housing</label>
+                            <br>
+                            <img src="img/securityicon_equalhousing.svg" alt="Equal Housing Lender">
                         </div>
                     </div>
                 </div>
