new svgs, fix errors

--- a/index.html
+++ b/index.html
@@ -229,9 +229,6 @@
                   <div class="row">
                     <div class="large-12 columns">
                         <p>Help text</p>
-                        <small class="help">Expand help text above the field like this when a help-needed field is selected.  Push up fields already completed and keeping the active field in place.</small>
-
-                        <br>
                         <label class="help">Employment Status</label>
                         <select>
                             <option value="">Select</option>
@@ -240,7 +237,8 @@
                             <option>Unemployed</option>
                             <option>Other</option>
                         </select>
-
+                        <small class="help">Expand help text below the field like this when a help-needed field is selected.</small>
+                        <br>
                     </div>
                   </div>
                   <br>
@@ -311,30 +309,30 @@
                 <div class="row">
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
-                            <label>Curved Arrow</label>
+                            <label>L White Arrow</label>
                             <br>
-                            <img src="img/curved_arrow.png" alt="Curved Arrow">
+                            <img src="img/arrow_left_white.svg" alt="Left arrow">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
-                            <label>Straight Arrow</label>
+                            <label>R White Arrow</label>
                             <br>
-                            <img src="img/arrow_right.png" alt="Straight Arrow">
+                            <img src="img/arrow_right_white.svg" alt="Right arrow">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
-                            <label>Dropdown Arrow</label>
+                            <label>L Blue Arrow</label>
                             <br>
-                            <img src="img/arrowDropdown.png" alt="Dropdown Arrow">
+                            <img src="img/arrow_left_blue.svg" alt="Left arrow">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
-                            <label>Success Check</label>
+                            <label>R Blue Arrow</label>
                             <br>
-                            <img src="img/successCheck.png" alt="Success Check">
+                            <img src="img/arrow_right_blue.svg" alt="Right arrow">
                         </div>
                     </div>
                 </div>
@@ -342,30 +340,61 @@
                 <div class="row">
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
+                            <label>Dropdown Arrow</label>
+                            <br>
+                            <img src="img/arrow_down_dkblue.svg" alt="Dropdown Arrow">
+                        </div>
+                    </div>
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
+                            <label></label>
+                            <br>
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
+                            <label>Success Check</label>
+                            <br>
+                            <img src="img/successCheck.svg" alt="Success Check">
+                        </div>
+                    </div>
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
                             <label>Error X</label>
                             <br>
-                            <img src="img/errorX.png" alt="Error X">
+                            <img src="img/errorX.svg" alt="Error X">
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="large-3 medium-3 columns">
+                        <div class="panel">
+                            <label></label>
+                            <br>
+                            <img src="" alt="">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
                             <label>Facebook</label>
                             <br>
-                            <img src="img/iconfacebookblue.png" alt="Facebook">
+                            <img src="img/iconfacebook.svg" alt="Facebook">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
                             <label>Twitter</label>
                             <br>
-                            <img src="img/icontwitterblue.png" alt="Twitter">
+                            <img src="img/icontwitter.svg" alt="Twitter">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
                             <label>LinkedIn</label>
                             <br>
-                            <img src="img/iconlinkedinblue.png" alt="LinkedIn">
+                            <img src="img/iconlinkedin.svg" alt="LinkedIn">
                         </div>
                     </div>
                 </div>
