fix radio and checkboxes

--- a/index.html
+++ b/index.html
@@ -190,13 +190,13 @@
                         <input type="radio" name="radio1" style="display:none;"><span class="custom radio"></span>Radio 1
                     </label>
                     <label for="radio2">
-                        <input type="radio" name="radio2" style="display:none;"><span class="custom radio"></span>Radio 2
+                        <input type="radio" name="radio2" style="display:none;"><span class="custom radio on"></span>Radio 2
                     </label>
             </div>
             <div class="large-6 medium-6 columns">
               <label>Checkboxes are like so</label>
               <label for="checkbox1"><input type="checkbox" name="Checkbox 1" style="display:none;"><span class="custom checkbox"></span>Checkbox 1</label>
-              <label for="checkbox2"><input type="checkbox" name="Checkbox 2" style="display:none;"><span class="custom checkbox"></span>Checkbox 2</label>
+              <label for="checkbox2"><input type="checkbox" name="Checkbox 2" style="display:none;"><span class="custom checkbox on"></span>Checkbox 2</label>
             </div>
           </div>
         </form>
