fixed help style

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prosper Style Guide</title>
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
 
@@ -231,13 +233,9 @@
                         <p>Help text</p>
                         <label class="help">Employment Status</label>
                         <select>
-                            <option value="">Select</option>
-                            <option>Employed</option>
-                            <option>Self-Employed</option>
-                            <option>Unemployed</option>
-                            <option>Other</option>
+                            <option value="">Other</option>
                         </select>
-                        <small class="help">Expand help text below the field like this when a help-needed field is selected.</small>
+                        <small class="help">"Other" means your main source of income is not from a current job or self-run business. For example, this might be investments, rental property, or retirement.</small>
                         <br>
                     </div>
                   </div>
