--- a/index.html
+++ b/index.html
@@ -344,9 +344,9 @@
                     </div>
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
-                            <label></label>
+                            <label>Security Lock</label>
                             <br>
-                            <img src="" alt="">
+                            <img src="img/icon_lock.svg" alt="Security Lock">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
@@ -368,7 +368,7 @@
                 <div class="row">
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
-                            <label></label>
+                            <label>(empty)</label>
                             <br>
                             <img src="" alt="">
                         </div>
