--- a/index.html
+++ b/index.html
@@ -368,9 +368,9 @@
                 <div class="row">
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
-                            <label>(empty)</label>
+                            <label>Telephone</label>
                             <br>
-                            <img src="" alt="">
+                            <img src="img/telephone.svg" alt="Telephone">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
