added system name and fixed icons

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prosper Style Guide</title>
+    <title>Prosper Pattern Library (Bridge)</title>
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
@@ -13,9 +13,10 @@
   <body>
     <div class="row">
       <div class="large-3 columns masterside-nav">
-        <h1>Prosper Style Guide</h1>
+        <h1>Prosper Pattern Library</h1>
         <nav>
             <ul class="side-nav" role="navigation" title="Link List">
+              <li role="menuitem"><a href="#codestyle">Code Style</a></li>
               <li role="menuitem"><a href="#gridsystem">Grid System</a></li>
               <li role="menuitem"><a href="#typography">Typography</a></li>
               <li role="menuitem"><a href="#colors">Colors</a></li>
@@ -29,9 +30,15 @@
       </div>
 
       <div class="large-9 columns mainsection">
-          <p>The beginning of our style guide for the responsive project.  Still needs some polish, but closer to styles we are using for the reskinned funnel.</p>
-          <p>For HTML and CSS styles, I refered to the <a href="https://github.com/stubbornella/oocss/wiki" class="link" target="blank">OOCSS documentation</a>, <a href="https://github.com/necolas/idiomatic-css" class="link" target="blank">Idiomatic commenting style</a> and <a href="http://foundation.zurb.com/docs/" class="link" target="_blank">Foundation's documentation</a>.  I tried to camel case all class names, not use any IDs and separate structural elements like containers from skin elements like text and graphics.  Styles in flight, nothing is permanent.
-          </p>
+
+        <h4 class="sectionTitle"><a name="bridge">Bridge Design System</a></h4>
+
+            <p>This design system is called Bridge.</p>
+
+        <h4 class="sectionTitle"><a name="codestyle">Code Style</a></h4>
+
+            <p>The beginning of our style guide for the responsive project.  Still needs some polish, but closer to styles we are using for the reskinned funnel.</p>
+            <p>For HTML and CSS styles, I refered to the <a href="https://github.com/stubbornella/oocss/wiki" class="link" target="blank">OOCSS documentation</a>, <a href="https://github.com/necolas/idiomatic-css" class="link" target="blank">Idiomatic commenting style</a> and <a href="http://foundation.zurb.com/docs/" class="link" target="_blank">Foundation's documentation</a>.  I tried to camel case all class names, not use any IDs and separate structural elements like containers from skin elements like text and graphics.  Styles in flight, nothing is permanent.</p>
 
         <h4 class="sectionTitle"><a name="gridsystem">Grid System</a></h4>
 
@@ -344,9 +351,9 @@
                     </div>
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
-                            <label>Security Lock</label>
+                            <label>Checkbox Check</label>
                             <br>
-                            <img src="img/icon_lock.svg" alt="Security Lock">
+                            <img src="img/checkboxblue.svg" alt="Checkbox">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
@@ -368,9 +375,9 @@
                 <div class="row">
                     <div class="large-3 medium-3 columns">
                         <div class="panel">
-                            <label>Telephone</label>
+                            <label>Security Lock</label>
                             <br>
-                            <img src="img/telephone.svg" alt="Telephone">
+                            <img src="img/icon_lock.svg" alt="Security Lock">
                         </div>
                     </div>
                     <div class="large-3 medium-3 columns">
