--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Prosper Pattern Library (Bridge)</title>
     <link rel="stylesheet" href="css/app.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
 
