add writing style guide link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
               <li role="menuitem"><a href="#buttons">Buttons and Links</a></li>
               <li role="menuitem"><a href="#logo">Logo</a></li>
               <li role="menuitem"><a href="#icons">Icons</a></li>
-              <li role="menuitem"><a href="https://github.com/carbonfive/abtstyles">Github Repo</a></li>
+              <li role="menuitem"><a href="https://docs.google.com/a/carbonfive.com/document/d/1PAX8fOyrpc3FUlumDRrLcLsWxyJKcOXg74WQa0dvhNA/edit" target="_blank">Writing Style</a></li>
+              <li role="menuitem"><a href="https://github.com/carbonfive/abtstyles" target="_blank">Github Repo</a></li>
             </ul>
         </nav>
       </div>
@@ -437,6 +438,40 @@
             </div>
         </div>
 
+        <!-- <hr />
+
+        <div class="row">
+            <div class="large-12 columns">
+                <h4 class="sectionTitle"><a name="writing">Writing Style</a></h4>
+                <h5 class="subSectionTitle">General guidelines</h5>
+                    <ul class="list">
+                        <li>Use sentence case for page titles, links and calls to action.  Capitalize the first word and proper nouns only.
+                            <ul class="sublist">Examples:
+	                                 <li>Learn more about borrowing</li>
+	                                 <li>Meet the Prosper team</li>
+	                                 <li>Check your rate</li>
+                            </ul>
+                        </li>
+                        <li>Use active voice
+                            <p class>Try “Investors commit funds to your loan” instead of “Your loan will be funded by investors”</p>
+                        </li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                <h5 class="subSectionTitle">Homepage and informational content</h5>
+                    <p></p>
+                <h5 class="subSectionTitle">Application process for borrowers and investors</h5>
+                    <p></p>
+                <h5 class="subSectionTitle">Email messaging
+</h5>
+                    <p></p>
+                <h5 class="subSectionTitle">Errors and help</h5>
+                    <p></p>
+                  </div>
+                </div>
+            </div>
+        </div> -->
     </div>
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
